--- a/www/app/Views/base.html
+++ b/www/app/Views/base.html
@@ -37,6 +37,12 @@
                <p>Clientes</p>
              </a>
            </li>
+           <li class="nav-item ">
+              <a class="nav-link" href="{{ baseUrl }}/invoice">
+                <i class="material-icons">business</i>
+                <p>Faturas</p>
+              </a>
+            </li>
           
          </ul>
        </div>
