--- a/www/app/Views/base.html
+++ b/www/app/Views/base.html
@@ -267,11 +267,15 @@
    
    <script src="{{ baseUrl}}/assets/js/dashboard.js"></script>
    <script src ="{{ baseUrl }}/assets/js/Customer.js"></script>
+   <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+   <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
    <script>
      $(document).ready(function() {
        // Javascript method's body can be found in assets/js/demos.js
        md.initDashboardPageCharts();
- 
+       $('#datepickerde').datepicker();
+       $('#datepickerate').datepicker();
+       
      });
    </script>
  </body>
