--- a/www/app/Views/invoice.html
+++ b/www/app/Views/invoice.html
@@ -40,11 +40,11 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
-                                        <select class="browser-default custom-select">
-                                            <option selected>Open this select menu</option>
-                                            <option value="1">One</option>
-                                            <option value="2">Two</option>
-                                            <option value="3">Three</option>
+                                        <select name="listCustomers" class="browser-default custom-select">
+                                            <option selected>Todos</option>
+                                            {% for listCombo in comboListCustomers %}
+                                                <option value="{{ listCombo.id }}">{{ listCombo.name }}</option>
+                                            {%endfor%}
                                         </select>
                                     </div>
 
